force-app/main/default/objects/Funnelocity_Revenue_data__c/Funnelocity_Revenue_data__c.object-meta.xml
<CustomObject>
    <label>Funnelocity Revenue data</label>
    <nameField>
        <label>Funnelocity Revenue data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnelocity Revenue data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>