force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Direct_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Direct_Revenue__c</fullName>
    <label>Direct Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>