force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <label>Fiscal Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>