force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal year added to permit copying of data from Fiscal revenue record.  This has to be configured for the customer when it is used.</description>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>