force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Indirect_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Revenue__c</fullName>
    <label>Indirect Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>