force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Funnelocity Revenue data</relationshipLabel>
    <relationshipName>Funnelocity_Revenue_data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>