force-app/main/default/objects/Funnelocity_Revenue_data__c/fields/Snapshot_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Scheduled_Date__c</fullName>
    <description>This field is created to use in the historical batch calculation</description>
    <formula>IF( Month__c  = 12, 
DATE( Year__c , 12, 31 ), 
DATE( Year__c , Month__c   + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Scheduled Date</label>
    <type>Date</type>
</CustomField>