force-app/main/default/objects/Funnelocity_Revenue_data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep_Profile__c</columns>
    <columns>Direct_Revenue__c</columns>
    <columns>Month__c</columns>
    <columns>Snapshot_Scheduled_Date__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>